# installer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  codeql.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.py  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  util.rs
src-tauri/src/commands/: autosync.rs  backup.rs  config.rs  context.rs  detect.rs  install.rs  logs.rs  mod.rs  project.rs  rbxsync.rs  rojo.rs  update.rs
src-tauri/src/templates/: context_packs.rs  mod.rs
src/components/: ProgressBar.tsx  StepIndicator.tsx  Titlebar.tsx  ToolIcons.tsx
src/components/launcher/: Launcher.tsx  LogTerminal.tsx  SettingsPopover.tsx  UpdateBanner.tsx
src/components/steps/: Complete.tsx  Detecting.tsx  Installing.tsx  Recovery.tsx  SelectProject.tsx  SelectTool.tsx  Welcome.tsx
src/hooks/: useInstaller.ts  useLauncher.ts  useUpdateChecker.ts
src/lib/: types.ts
src/styles/: index.css
