[package]
name = "roxlit"
version = "0.15.0"
description = "Roxlit — launcher for AI-powered Roblox development"
authors = ["Roxlit"]
edition = "2021"
default-run = "roxlit"

[lib]
name = "roxlit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
thiserror = "2"
zip = "2"
dirs = "6"
futures-util = "0.3"
anyhow = "1"
[[bin]]
name = "roxlit-mcp"
path = "src/bin/roxlit_mcp.rs"
